fix: align items in the app container by center

--- a/youtube-client/src/assets/styles/style.css
+++ b/youtube-client/src/assets/styles/style.css
@@ -34,6 +34,7 @@ body {
   background-image: radial-gradient(rgba(0, 0, 0, 0.644), rgba(0, 0, 0, 0.904));
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .bottom {
